tests/auto/quickcontrols/controls/data/tst_combobox.qml
@@ -2288,6 +2288,35 @@ TestCase {
         compare(control.currentIndex, 1)
     }
 
+    // QTBUG-109721 - verify that an eaten press event for the space key
+    // doesn't open the popup when the key is released.
+    Component {
+        id: comboboxEatsSpace
+        ComboBox {
+            id: nonEditableComboBox
+            editable: false
+            model: ["NonEditable", "Delta", "Echo", "Foxtrot"]
+            Keys.onSpacePressed: (event) => event.accept
+        }
+    }
+
+    function test_spacePressEaten() {
+        let control = createTemporaryObject(comboboxEatsSpace, testCase)
+        verify(control)
+        control.forceActiveFocus()
+
+        var visibleChangedSpy = signalSpy.createObject(control, {target: control.popup, signalName: "visibleChanged"})
+        verify(visibleChangedSpy.valid)
+
+        // press doesn't open
+        keyPress(Qt.Key_Space)
+        verify(!control.pressed)
+        compare(visibleChangedSpy.count, 0)
+        // neither does release
+        keyRelease(Qt.Key_Space)
+        compare(visibleChangedSpy.count, 0)
+    }
+
     Component {
         id: listOfGadgets
         QtObject {
